[project]
name = "uv-virtual-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb==0.4.21",
    "langchain>=0.3.25",
    "langchain-chroma==0.1.4",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.18",
    "onnxruntime==1.16.3",
]
